# st7789_enc_lvgl

./: sdkconfig  sdkconfig.old
components/lvgl__lvgl_esp32_drivers/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  test_app_main.c
main/backlight/: CMakeLists.txt  bl.c  bl.h
main/dio/: CMakeLists.txt  tca9534.c  tca9534.h  tca9535.c  tca9535.h
main/display/: dispcolor.c  dispcolor.h
main/encoder/: CMakeLists.txt  encoder.c  encoder.h
main/i2cmaster/: CMakeLists.txt  i2cmaster.c  i2cmaster.h
main/lvgl_demo/: CMakeLists.txt  lvgl_demo_1.c  lvgl_demo_1.h  lvgl_demo_2.c  lvgl_demo_2.h  lvgl_demo_3.c  lvgl_demo_3.h  lvgl_demo_4.c  lvgl_demo_4.h  lvgl_demo_5.c  lvgl_demo_5.h  lvgl_settings.c  lvgl_settings.h
main/st7789/: CMakeLists.txt  st7789.c  st7789.h
